--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "basic-auth": "^2.0.0",
     "compression": "^1.7.3",
     "date-fns": "^1.29.0",
@@ -45,6 +46,10 @@
     "node-sass": "^4.9.2",
     "offline-plugin": "^5.0.5",
     "postcss-loader": "^2.1.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-spring": "^6.1.8",
+    "react-transition-group": "^2.5.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
