--- a/package.json
+++ b/package.json
@@ -20,19 +20,17 @@
     "compression": "^1.7.3",
     "date-fns": "^1.29.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "preact": "^8.2.9",
-    "preact-portal": "^1.1.3",
-    "preact-render-to-string": "^3.8.0",
-    "preact-router": "^2.6.1",
-    "preact-transition-group": "^1.1.1"
+    "express": "^4.16.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "autoprefixer": "^9.1.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "classnames": "^2.2.6",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
