content, and animation tweaks

--- a/package.json
+++ b/package.json
@@ -4,43 +4,43 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production node ./dist/bundle.server.js",
-    "deploy": " npm run build && firebase deploy",
-    "dev": "webpack-dev-server --config webpack.config.js",
+    "analyse:fe": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json -p 8080",
     "build": "NODE_ENV=production webpack --config webpack.config.js",
-    "analyse:fe": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json",
-    "analyse:be": "npm run build && webpack-bundle-analyzer ./dist/stats-be.json"
+    "crawl": "NODE_ENV=production babel-node ./crawler.js --presets env react stage-2",
+    "deploy": "npm run build && npm run crawl && firebase deploy",
+    "start": "webpack-dev-server --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@reach/router": "^1.2.1",
-    "basic-auth": "^2.0.0",
-    "compression": "^1.7.3",
-    "date-fns": "^1.29.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3"
-  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@reach/router": "^1.2.1",
     "autoprefixer": "^9.1.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "basic-auth": "^2.0.0",
     "classnames": "^2.2.6",
+    "compression": "^1.7.3",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "date-fns": "^1.29.0",
+    "ejs": "^2.6.1",
     "eslint": "^5.3.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.10.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase-tools": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.9.2",
     "offline-plugin": "^5.0.5",
     "postcss-loader": "^2.1.6",
