--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase-tools": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "intersection-observer": "^0.5.1",
     "mini-css-extract-plugin": "^0.4.1",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.2",
