--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "analyse:fe": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json -p 8080",
     "build": "NODE_ENV=production webpack --config webpack.config.js",
-    "crawl": "NODE_ENV=production babel-node ./crawler.js --presets env react stage-2",
+    "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=env,react,stage-2",
     "deploy": "npm run build && npm run crawl && firebase deploy",
     "start": "webpack-dev-server --config webpack.config.js"
   },
