--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "analyse:fe": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json -p 8080",
+    "analyse": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json -p 8080",
     "build": "NODE_ENV=production webpack --config webpack.config.js",
     "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=env,react,stage-2",
     "deploy": "npm run build && npm run crawl && firebase deploy",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@reach/router": "^1.2.1",
+    "@stilva/glsl": "github:stilva/glsl",
     "autoprefixer": "^9.1.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -38,6 +39,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase-tools": "^5.1.1",
+    "glsl": "github:stilva/glsl",
     "html-webpack-plugin": "^3.2.0",
     "intersection-observer": "^0.5.1",
     "mini-css-extract-plugin": "^0.4.1",
@@ -45,6 +47,7 @@
     "node-sass": "^4.9.2",
     "offline-plugin": "^5.0.5",
     "postcss-loader": "^2.1.6",
+    "prismjs": "^1.15.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-spring": "^6.1.8",
