--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "react-spring": "^6.1.10",
-    "react-transition-group": "^2.5.3",
+    "react-transition-group": "^4.0.0",
+    "router5": "^7.0.2",
+    "router5-plugin-browser": "^7.0.2",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
