--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "main": "app.js",
   "scripts": {
     "analyse": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json -p 8000",
-    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.js --display-error-details",
     "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=env,react,stage-2",
     "deploy": "npm run build && npm run crawl && firebase deploy",
     "start": "webpack-dev-server --config webpack.config.js"
   },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@stilva/glsl": "github:stilva/glsl",
     "@stilva/markdown": "github:stilva/markdown",
-    "autoprefixer": "^9.4.7",
+    "@stilva/transitionable-react-router": "github:stilva/transitionable-react-router",
+    "autoprefixer": "^9.6.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -28,37 +32,35 @@
     "babel-register": "^6.26.0",
     "basic-auth": "^2.0.1",
     "classnames": "^2.2.6",
-    "compression": "^1.7.3",
+    "compression": "^1.7.4",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "date-fns": "^1.30.1",
-    "ejs": "^2.6.1",
-    "eslint": "^5.12.1",
+    "ejs": "^2.7.1",
+    "eslint": "^5.16.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.12.4",
-    "express": "^4.16.4",
+    "eslint-plugin-react": "^7.16.0",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase-tools": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.11.0",
-    "offline-plugin": "^5.0.6",
+    "node-sass": "^4.12.0",
+    "offline-plugin": "^5.0.7",
     "postcss-loader": "^2.1.6",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
-    "react-spring": "^6.1.10",
-    "router5": "^7.0.2",
-    "router5-plugin-browser": "^7.0.2",
-    "sass-loader": "^7.1.0",
+    "prismjs": "^1.17.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "sass-loader": "^7.3.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.28.0",
+    "webpack": "^4.41.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "dependencies": {}
 }
