--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,12 @@
           "value": "max-age=60"
         }
       ]
-    }
+    },
+    "rewrites": [
+      {
+        "source": "/uxe/**",
+        "function": "uxe"
+      }
+    ]
   }
 }
