--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "NODE_ENV=production webpack --config webpack.config.js --display-error-details",
     "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=env,react,stage-2",
     "deploy": "npm run build && npm run crawl && firebase deploy",
+    "deploy:functions": "firebase deploy --only functions",
     "start": "webpack-dev-server --config webpack.config.js"
   },
   "browserslist": [
@@ -17,11 +18,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@stilva/glsl": "github:stilva/glsl",
     "@stilva/markdown": "github:stilva/markdown",
     "@stilva/transitionable-react-router": "github:stilva/transitionable-react-router",
-    "autoprefixer": "^9.7.1",
+    "autoprefixer": "^9.7.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -36,7 +37,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
     "date-fns": "^1.30.1",
-    "ejs": "^2.7.1",
+    "ejs": "^2.7.4",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.16.0",
@@ -50,8 +51,8 @@
     "offline-plugin": "^5.0.7",
     "postcss-loader": "^2.1.6",
     "prismjs": "^1.17.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "sass-loader": "^7.3.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
