--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "analyse": "npm run build && webpack-bundle-analyzer ./dist/stats-fe.json -p 8000",
     "build": "NODE_ENV=production webpack --config webpack.config.js --display-error-details",
-    "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=env,react,stage-2",
+    "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=@babel/preset-env,@babel/preset-react",
     "deploy": "npm run build && npm run crawl && firebase deploy",
     "deploy:functions": "firebase deploy --only functions",
     "start": "webpack-dev-server --config webpack.config.js"
