--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,9 @@
 {
   "sourceMaps": true,
   "presets": [
-    "@babel/preset-env",
+    ["@babel/preset-env", {
+      "targets": "last 2 years"
+    }],
     "@babel/preset-react"
   ],
   "plugins": [
