--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "crawl": "NODE_ENV=production babel-node ./crawler.js --presets=@babel/preset-env,@babel/preset-react",
     "deploy": "npm run build && npm run crawl && firebase deploy",
     "deploy:functions": "firebase deploy --only functions",
-    "start": "webpack-dev-server --config webpack.config.js"
+    "start": "webpack-dev-server --hot --config webpack.config.js"
   },
   "browserslist": [
     "last 2 versions"
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.1",
     "@stilva/glsl": "github:stilva/glsl",
     "@stilva/markdown": "github:stilva/markdown",
     "@stilva/spring": "github:stilva/spring",
@@ -63,6 +64,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-refresh": "^0.8.2",
     "sass-loader": "^7.3.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
