--- a/babel.config.json
+++ b/babel.config.json
@@ -4,10 +4,12 @@
     ["@babel/preset-env", {
       "targets": "last 2 years"
     }],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "linaria/babel"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    "@loadable/babel-plugin"
   ]
 }
