--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "webpack-dev-server --hot --config webpack.config.js"
   },
   "browserslist": [
-    "last 2 versions"
+    "last 2 chrome versions",
+    "last 2 iOS versions",
+    "not IE 11"
   ],
   "keywords": [],
   "author": "",
@@ -35,12 +37,16 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@loadable/babel-plugin": "^5.12.0",
+    "@loadable/component": "^5.12.0",
+    "@loadable/server": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.12.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.1",
     "@stilva/glsl": "github:stilva/glsl",
     "@stilva/markdown": "github:stilva/markdown",
     "@stilva/spring": "github:stilva/spring",
     "@stilva/transitionable-react-router": "github:stilva/transitionable-react-router",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.4",
     "babel-loader": "^8.0.0",
     "basic-auth": "^2.0.1",
     "classnames": "^2.2.6",
@@ -56,11 +62,13 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase-tools": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "linaria": "^1.3.3",
     "mini-css-extract-plugin": "^0.4.5",
     "mkdirp": "^0.5.5",
     "node-sass": "^4.13.1",
     "offline-plugin": "^5.0.7",
     "postcss-loader": "^2.1.6",
+    "postcss-scss": "^2.1.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
