many updates. fixes safari webgl bug. updates glsl.

--- a/babel.config.json
+++ b/babel.config.json
@@ -2,7 +2,7 @@
   "sourceMaps": true,
   "presets": [
     ["@babel/preset-env", {
-      "targets": "last 2 years"
+      "targets": "last 1 year"
     }],
     "@babel/preset-react",
     "linaria/babel"
