--- a/package.json
+++ b/package.json
@@ -46,8 +46,13 @@
     "@stilva/markdown": "github:stilva/markdown",
     "@stilva/spring": "github:stilva/spring",
     "@stilva/transitionable-react-router": "github:stilva/transitionable-react-router",
+    "@tensorflow-models/face-landmarks-detection": "0.0.3",
+    "@tensorflow/tfjs-backend-webgl": "^3.5.0",
+    "@tensorflow/tfjs-converter": "^3.5.0",
+    "@tensorflow/tfjs-core": "^3.5.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "basic-auth": "^2.0.1",
     "classnames": "^2.3.1",
     "compression": "^1.7.4",
@@ -76,6 +81,7 @@
     "sass-loader": "^7.3.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
+    "terser-webpack-plugin": "^4.2.3",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^2.13.1",
