--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
     "cleanUrls": true,
     "headers": [
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|css|js)",
+        "source": "**/*.@(jpg|jpeg|gif|png|css|js|bin|json)",
         "headers": [
           {
             "key": "Cache-Control",
