--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-polyfill": "^6.26.0",
     "basic-auth": "^2.0.1",
     "classnames": "^2.3.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression": "^1.7.4",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
@@ -70,6 +71,7 @@
     "linaria": "^1.4.1",
     "mini-css-extract-plugin": "^0.4.5",
     "mkdirp": "^0.5.5",
+    "node-html-parser": "^3.2.0",
     "node-sass": "^4.14.1",
     "offline-plugin": "^5.0.7",
     "postcss-loader": "^2.1.6",
