--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@stilva/spring": "github:stilva/spring",
     "@stilva/transitionable-react-router": "github:stilva/transitionable-react-router",
     "@tensorflow-models/face-landmarks-detection": "0.0.3",
+    "@tensorflow/tfjs-backend-wasm": "^3.6.0",
     "@tensorflow/tfjs-backend-webgl": "^3.5.0",
     "@tensorflow/tfjs-converter": "^3.5.0",
     "@tensorflow/tfjs-core": "^3.5.0",
@@ -66,6 +67,7 @@
     "eslint-plugin-react": "^7.23.2",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
     "firebase-tools": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "linaria": "^1.4.1",
